# PCA

./: PCA.cabal  stack.yaml
app/: Main.hs
src/Math/: Matrix.hs
src/PCA/: GPExample.hs  GaussianProcess.hs  PCA.hs  PPCA.hs  Types.hs  Util.hs
src/PCA/TypeSafe/: PCA.hs  PPCA.hs  Types.hs  Util.hs
