cabal-version:  1.12
name:           PCA
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/serokell/PCA#readme>
homepage:       https://github.com/serokell/PCA#readme
bug-reports:    https://github.com/serokell/PCA/issues
author:         Serokell OÜ
maintainer:     hi@serokell.io
copyright:      2020 Serokell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/serokell/PCA

library
  exposed-modules:
      PCA.GaussianProcess
      PCA.PCA
      PCA.PPCA
      PCA.Types
      PCA.Util
      PCA.TypeSafe.PCA
      PCA.TypeSafe.PPCA
      PCA.TypeSafe.Types
      PCA.TypeSafe.Util
  other-modules:
      Math.Matrix
      Paths_PCA
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , lens
    , normaldistribution
    , random
    , type-natural
    , singletons
    , repa
    , repa-linear-algebra
    , repa-algorithms
    , singletons
    , vector
    , vinyl
    , universum
  build-tool-depends:
      autoexporter:autoexporter
  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  default-extensions: NoImplicitPrelude
                      RankNTypes
                      BangPatterns
                      TemplateHaskell
                      TypeFamilies
                      GADTs
                      DataKinds
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeOperators
                      TypeApplications
                      RecordWildCards
                      MultiWayIf

executable PCA-exe
  main-is: Main.hs
  other-modules:
      Paths_PCA
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      PCA
    , base >=4.7 && <5
    , ghc-typelits-knownnat
    , universum
    , attoparsec
    , random
    , repa
  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  default-extensions: RankNTypes
                      TemplateHaskell
                      TypeFamilies
                      GADTs
                      DataKinds
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeOperators
                      TypeApplications
                      RecordWildCards
                      NoImplicitPrelude
